chore(npm): update NPM dependencies
- Include ATUI update to v0.4.2 (no changes concerned).
- Paste new NPM configuration files from ATUI.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Large and proprietary files
+*.mp3
+!atui/kernel/assets/notification.mp3
+*.mp4
+patch/musics/*
+patch/videos/*
+
 # Useless files
 .vscode
 
@@ -5,6 +12,4 @@
 node_modules
 
 # Cache
-.cspellcache
-.eslintcache
-.stylelintcache
+.*cache
